--- a/index.html
+++ b/index.html
@@ -3,63 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>BubbleBurst</title>
-    <style>
-      * { padding: 0; margin: 0}
-      canvas { background: #eee; display: block; margin: 0 auto; }
-    </style>
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Monoton" rel="stylesheet">
+     <link rel="stylesheet" type="text/css" href="./assets/stylesheets/game.css">
+
   </head>
   <body>
-    <canvas id="BubbleBurstCanvas" width="480" height="640"></canvas>
+    <h1>BUBBLE BURST</h1>
+      <div class="main">
+      <div class="rules">
+      <h2>How to Play</h2>
+        <ul class="rules-list">
+          <li>Use the mouse to aim</li>
+          <li>Click to Shoot</li>
+          <li>Clear bubbles by targeting and creating clusters of the same color</li>
+        </ul>
+      </div>
+      <canvas id="BubbleBurstCanvas" width="480" height="640"></canvas>
+      <div class="personal-links">
+        <!-- <p>created by: <h2>Brice Powell</h2></p> -->
+        <a href="www.github.com/bpowell15/">GitHub</a>
+        <a href="www.github.com/bpowell15/">LinkedIn</a>
+        <a href="www.github.com/bpowell15/">Portfolio</a>
+      </div>
+  </div>
+    <script type="application/javascript" src="./lib/bundle.js"></script>
   </body>
-
-  <script>
-
-    // reference the html element
-    const canvas = document.getElementById("BubbleBurstCanvas");
-    // create constant for drawing tool
-    const ctx = canvas.getContext("2d");
-    // // draw filled square
-    // ctx.beginPath();
-    // ctx.rect(20, 40, 50, 50);
-    // ctx.fillStyle = "#FF0000";
-    // ctx.fill();
-    // ctx.closePath();
-    // // drawin filled circle
-    // ctx.beginPath();
-    // ctx.arc(240, 160, 20, 0, Math.PI*2, false);
-    // ctx.fillStyle = "green";
-    // ctx.fill();
-    // ctx.closePath();
-    // // draw hollow rectangle
-    // ctx.beginPath();
-    // ctx.rect(160, 10, 100, 40);
-    // ctx.strokeStyle = "rgba(0, 0, 255, 0.5)";
-    // ctx.stroke();
-    // ctx.closePath();
-
-    // set ball initial position
-    let x  = canvas.width/2;
-    let y = canvas.height-30;
-    // set rate of change (slope/direction of movement)
-    let dx = 1;
-    let dy = -2;
-
-    let ballRadius = 10;
-
-    function drawBall(){
-      ctx.beginPath();
-      ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-      ctx.fillStyle = "#0095DD";
-      ctx.fill();
-      ctx.closePath();
-    }
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      drawBall();
-      x += dx;
-      y += dy;
-    }
-    setInterval(draw, 10);
-
-  </script>
 </html>
