Add row shift, shooter angle

--- a/index2.html
+++ b/index2.html
@@ -132,7 +132,7 @@
       collisionDetection();
       drawScore();
       drawLives();
-       bounces bubble off sides
+       // bounces bubble off sides
       if ( x + dx > canvas.width - bubbleRadius || x + dx < bubbleRadius ) {
         dx = -dx
       }
