--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BubbleBurst</title>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Monoton" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="./assets/stylesheets/game.css">
