--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <canvas id="BubbleBurstCanvas" width="490" height="640"></canvas>
       <div class="personal-links">
-        <p>created by: <h2>Brice Powell</h2></p>
+        <!-- <p>created by: <h2>Brice Powell</h2></p> -->
         <a href="www.github.com/bpowell15/">GitHub</a>
         <a href="www.github.com/bpowell15/">LinkedIn</a>
         <a href="www.github.com/bpowell15/">Portfolio</a>
