--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
       </div>
       <canvas id="BubbleBurstCanvas" width="490" height="640"></canvas>
       <div class="personal-links">
-        <!-- <p>created by: <h2>Brice Powell</h2></p> -->
-        <a href="www.github.com/bpowell15/">GitHub</a>
-        <a href="www.github.com/bpowell15/">LinkedIn</a>
-        <a href="www.github.com/bpowell15/">Portfolio</a>
+        <div>
+          <!-- <p>created by: <h2>Brice Powell</h2></p> -->
+        </div>
+        <ul>
+          <li><a href="www.github.com/bpowell15/">GitHub</a></li>
+          <li><a href="www.github.com/bpowell15/">LinkedIn</a></li>
+          <li><a href="www.github.com/bpowell15/">Portfolio</a></li>
+        </ul>
       </div>
   </div>
     <script type="application/javascript" src="./lib/bundle.js"></script>
