Refactor game class, test more before removing commented out code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <canvas id="BubbleBurstCanvas" width="490" height="640"></canvas>
       <div class="personal-links">
         <div>
-          <!-- <p>created by: <h2>Brice Powell</h2></p> -->
+          <p>created by: <h2>Brice Powell</h2></p>
         </div>
         <ul>
           <li><a href="www.github.com/bpowell15/">GitHub</a></li>
