--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
   </head>
   <body>
+    <!-- <audio controls = hidden autoplay = true>
+      <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.ogg" type="audio/mp3">
+      <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.mp3" type="audio/ogg">
+      <p>Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a> instead.</p>
+    </audio> -->
+     <embed src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.ogg" autostart="true" loop="true" hidden="true">
     <h1>BUBBLE BURST</h1>
       <div class="main">
       <div class="rules">
