--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>BubbleBurst</title>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Monoton" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="./assets/stylesheets/game.css">
@@ -14,7 +14,7 @@
       <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.mp3" type="audio/ogg">
       <p>Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a> instead.</p>
     </audio> -->
-     <embed src="./assets/bustamove.ogg" autostart="true" loop="true" hidden="true">
+     <embed src="./assets/song.ogg" autostart="true" volume="0" loop="true" hidden="true">
     <h1>BUBBLE BURST</h1>
       <div class="main">
       <div class="rules">
