--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
   </head>
   <body>
-    <!-- <audio controls = hidden autoplay = true>
-      <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.ogg" type="audio/mp3">
-      <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.mp3" type="audio/ogg">
-      <p>Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a> instead.</p>
-    </audio> -->
-     <embed src="./assets/song.ogg" autostart="true" volume="0" loop="true" hidden="true">
+    <!-- <audio src="./assets/song.ogg" type="audio/mp3"> -->
+      <!-- <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.mp3" type="audio/ogg"> -->
+      <!-- <p>Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a> instead.</p> -->
+    <!-- </audio> -->
+     <embed src="./assets/song.ogg" autostart="true" loop="true" hidden="true">
     <h1>BUBBLE BURST</h1>
       <div class="main">
       <div class="rules">
@@ -25,10 +24,10 @@
           <li>Clear bubbles by targeting and creating clusters of the same color</li>
         </ul>
       </div>
-      <canvas id="BubbleBurstCanvas" width="490" height="640"></canvas>
+      <canvas id="BubbleBurstCanvas" width="495" height="640"></canvas>
       <div class="personal-links">
         <div>
-          <p>created by: <h2>Brice Powell</h2></p>
+          <p><h2>Brice Powell</h2></p>
         </div>
         <ul>
           <li><a href="www.github.com/bpowell15/">GitHub</a></li>
