--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.mp3" type="audio/ogg"> -->
       <!-- <p>Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a> instead.</p> -->
     <!-- </audio> -->
-     <embed src="./assets/song.ogg" autostart="true" loop="true" hidden="true">
+     <!-- <embed src="./assets/song.ogg" autostart="true" loop="true" hidden="true"> -->
     <h1>BUBBLE BURST</h1>
       <div class="main">
       <div class="rules">
