--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" type="text/css" href="./assets/stylesheets/game.css">
 
   </head>
-  <body> 
+  <body>
     <!-- <audio src="./assets/song.ogg" type="audio/mp3"> -->
       <!-- <source src="/Users/bricepowell/desktop/JavaScriptProject/BubbleBurst/assets/bustamove.mp3" type="audio/ogg"> -->
       <!-- <p>Your browser doesn't support HTML5 audio. Here is a <a href="viper.mp3">link to the audio</a> instead.</p> -->
@@ -21,7 +21,7 @@
         <ul class="rules-list">
           <li>Use the mouse to aim</li>
           <li>Click to Shoot</li>
-          <li>Clear bubbles by targeting and creating clusters of the same color</li>
+          <li>Clear bubbles by targeting and creating clusters of three of more same colored bubbles</li>
         </ul>
       </div>
       <canvas id="BubbleBurstCanvas" width="495" height="640"></canvas>
