--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <ul class="rules-list">
           <li>Use the mouse to aim</li>
           <li>Click to Shoot</li>
-          <li>Clear bubbles by targeting and creating clusters of three of more same colored bubbles</li>
+          <li>Clear bubbles by targeting and creating clusters of three or more same colored bubbles</li>
         </ul>
       </div>
       <canvas id="BubbleBurstCanvas" width="495" height="640"></canvas>
       <div class="personal-links">
         <div>
-          <p><h2>Brice Powell</h2></p>
+          <p>written by:<h2>Brice Powell</h2></p>
         </div>
         <ul>
           <li><a href="www.github.com/bpowell15/">GitHub</a></li>
