--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BubbleBurst</title>
   <link href="https://fonts.googleapis.com/css?family=Bangers|Monoton" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="./assets/stylesheets/game.css">
-
+     <script src="https://use.fontawesome.com/0fcbe27086.js"></script>
   </head>
   <body>
     <!-- <audio src="./assets/song.ogg" type="audio/mp3"> -->
@@ -27,12 +27,12 @@
       <canvas id="BubbleBurstCanvas" width="495" height="640"></canvas>
       <div class="personal-links">
         <div>
-          <p>written by:<h2>Brice Powell</h2></p>
+          <p><h2>Brice Powell</h2></p>
         </div>
         <ul>
-          <li><a href="www.github.com/bpowell15/">GitHub</a></li>
-          <li><a href="www.github.com/bpowell15/">LinkedIn</a></li>
-          <li><a href="www.github.com/bpowell15/">Portfolio</a></li>
+          <li><a href="https://www.github.com/bpowell15/"><i class="fa fa-github-square fa-4x" aria-hidden="true"></i><br>GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/bpowell15"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i><br>LinkedIn</a></li>
+          <li><a href="http://www.bricepowell.com"><i class="fa fa-folder-open-o fa-4x" aria-hidden="true"></i><br>Portfolio</a></li>
         </ul>
       </div>
   </div>
