--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul>
           <li><a href="https://www.github.com/bpowell15/"><i class="fa fa-github-square fa-4x" aria-hidden="true"></i><br>GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/bpowell15"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i><br>LinkedIn</a></li>
-          <li><a href="http://www.bricepowell.com"><i class="fa fa-folder-open-o fa-4x" aria-hidden="true"></i><br>Portfolio</a></li>
+          <li><a href="http://www.bricepowell.com"><i class="fa fa-briefcase fa-4x" aria-hidden="true"></i><br>Portfolio</a></li>
         </ul>
       </div>
   </div>
