Add soundFX toggle

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li>Click to Shoot</li>
           <li>Clear bubbles by targeting and creating clusters of three or more same colored bubbles</li>
         </ul>
-        <i id="toggleSound" class="fa fa-volume-up fa-2x"></i>
+        <div class="sound">Music?&nbsp<i id="toggleSound" class="fa fa-volume-up fa-2x"></i>&nbspSoundFX?&nbsp<i id="toggleFX" class="fa fa-volume-up fa-2x"></i></div>
       </div>
       <canvas id="BubbleBurstCanvas" width="495" height="640"></canvas>
       <div class="personal-links">
