--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
       </div>
   </div>
     <script type="application/javascript" src="./lib/bundle.js"></script>
+    <script>
+      var audio = document.getElementById("myAudio");
+      audio.volume = 0.05;
+    </script>
   </body>
 </html>
