--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       <canvas id="BubbleBurstCanvas" width="495" height="640"></canvas>
       <div class="personal-links">
         <div>
-          <p><h2>Brice Powell</h2></p>
         </div>
         <ul>
           <li><a href="https://www.github.com/bpowell15/"><i class="fa fa-github-square fa-4x" aria-hidden="true"></i><br>GitHub</a></li>
@@ -39,6 +38,7 @@
         </ul>
       </div>
   </div>
+  <div class="author"><p>Built by:</p><a href="http://bricepowell.com"><h2>Brice Powell</h2></a></div>
     <script type="application/javascript" src="./lib/bundle.js"></script>
     <script>
       var audio = document.getElementById("myAudio");
