Fix padding and clicks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>BubbleBurst</title>
+    <link rel="shortcut icon" href="./assets/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Bangers|Monoton" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="./assets/stylesheets/game.css">
      <script src="https://use.fontawesome.com/0fcbe27086.js"></script>
@@ -37,7 +38,7 @@
     <script type="application/javascript" src="./lib/bundle.js"></script>
     <script>
       var audio = document.getElementById("myAudio");
-      audio.volume = 0.05;
+      audio.volume = 0.5;
     </script>
   </body>
 </html>
