--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
       </div>
   </div>
-  <div class="author"><p>Built by:</p><a href="http://bricepowell.com"><h2>Brice Powell</h2></a></div>
+  <div class="author"><p>Built by:</p><a href="https://bricepowell.com"><h2>Brice Powell</h2></a></div>
     <script type="application/javascript" src="./lib/bundle.js"></script>
     <script>
       var audio = document.getElementById("myAudio");
